pxc/tests/test_151_private/tfoo.px
namespace tfoo;
public import core::common -;
public import foo -;


{
  hoge z; // error
  println(z);
  println(mf_priv{2, 3});
}
